kubernetes/deployment-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easy-cozy-db
  labels:
    app: easy-cozy
spec:
  selector:
    matchLabels:
      app: easy-cozy
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: easy-cozy
        tier: db
    spec:
      containers:
      - image: couchdb:2.2
      # - image: treehouses/rpi-couchdb:2.0.0
        name: easy-cozy-db
        ports:
        - containerPort: 5984
          name: easy-cozy-db
        volumeMounts:
        - name: data-volume
          mountPath: /opt/couchdb/data
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: easy-cozy-db-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: easy-cozy
    tier: db
spec:
  ports:
    - port: 5984
  selector:
    app: easy-cozy
    tier: db
  type: ClusterIP
