kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: easy-cozy
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - my.easy-cozy.domain
    - drive.my.easy-cozy.domain
    - banks.my.easy-cozy.domain
    - blog.my.easy-cozy.domain
    - collect.my.easy-cozy.domain
    - contacts.my.easy-cozy.domain
    - home.my.easy-cozy.domain
    - notes.my.easy-cozy.domain
    - oauthcallback.my.easy-cozy.domain
    - onboarding.my.easy-cozy.domain
    - passwords.my.easy-cozy.domain
    - photos.my.easy-cozy.domain
    - settings.my.easy-cozy.domain
    - store.my.easy-cozy.domain    
    secretName: easy-cozy-crt
  rules:
  - host: my.easy-cozy.domain
    http:
      paths:
      - path: /
        backend:
          serviceName: easy-cozy
          servicePort: 8080
  - host: '*.my.easy-cozy.domain'
    http:
      paths:
      - path: /
        backend:
          serviceName: easy-cozy
          servicePort: 8080
